5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1602_1016.log
== SUBMITION (2019-03-22 08:46:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math	

a=float(input())
b=float(input())
c=float(input())

s=(a+b+c)/2
A=math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5)
-- EXECUTION TIME:
0.119955
-- ERROR:
  File "/home/codebench/codes/1602/1016/main.py", line 13
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:46:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math	

a=float(input())
b=float(input())
c=float(input())

s=(a+b+c)/2
A=math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.153489
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
